# syscoursebench-public

./: .gitignore  README.md  SUPPORT.md
.github/: ISSUE_TEMPLATE.md  pull_request_template.md
.github/scripts/: lint-courselab.sh  lint-syslab.sh
.github/workflows/: lint-courselab.yml  lint-syslab.yml  test.yml  validate-exam-pr.yml
benchmarks/courseexam/: .gitignore  README.md  prepare_dataset.py  pyproject.toml  run_eval.py  run_eval_trapi.py
benchmarks/courseexam/courseexam/: __init__.py  courseexam.py  dataset.py  metrics.py  prepare.py
benchmarks/courseexam/data/raw/example_course_2024_midterm/: exam.md  raft_basics.md
benchmarks/courseexam/tests/: __init__.py  test_data_schema.py
benchmarks/courselab/: README.md  pyproject.toml  run_eval.py  run_eval_claude_code.py  run_eval_trapi.py  run_solution_validation.py  task_audit_prompt.md  task_quality_report.md
benchmarks/courselab/courselab/: __init__.py  courselab.py  scorer.py  solver.py
benchmarks/courselab/data/: courses.json
benchmarks/courselab/data/distributed_systems/task_1_echo_server/: config.json  evaluate.sh  sol.sh
benchmarks/courselab/tutorial/distributed_systems/task_1_echo_server/: config.json  evaluate.sh  task.md
benchmarks/sysexam/: README.md  prepare_dataset.py  pyproject.toml  run_eval.py  run_eval_trapi.py
benchmarks/sysexam/sysexam/: __init__.py  dataset.py  scorer.py  sysexam.py
benchmarks/syslab/: README.md  pyproject.toml  run_eval.py  run_eval_claude_code.py  run_eval_trapi.py  run_solution_validation.py  task_audit_prompt.md  task_quality_report.md
(+12 files in other folders)
