[project]
name = "courseexam-bench"
version = "0.1.0+public.community"
description = "Course Exam Benchmark - Evaluate LLMs on systems course exam questions"
requires-python = ">=3.10"
dependencies = ["inspect-ai>=0.3.0"]
license = { text = "MIT" }
authors = [{ name = "Tarek Elsayed", email = "tareknaser360@gmail.com" }]

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "pytest-asyncio>=0.21.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["courseexam"]
