[project]
name = "courselab-bench"
version = "0.1.0+public"
requires-python = ">=3.10"
dependencies = ["inspect-ai>=0.3.0"]
description = "A benchmark for evaluating AI agents on systems programming labs"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Tarek Elsayed", email = "tareknaser360@gmail.com" }]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["courselab"]
